<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="udacity">Udacity</string>
    <string name="address1">2465 Latham St</string>
    <string name="address2">Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="website">www.udacity.com</string>
    <string name="description">Udacity is where \n
        lifelong learners come \n
        to learn the skills they need, \n
        to land the jobs they want, \n
        to build the lives they deserve.</string>
</resources>
